[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/AmericanCaptainPatrius02Fre-G06G.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Scripts/CardsWindow.gd" type="Script" id=5]
[ext_resource path="res://tests/integration/test_place_infantry/Main_test_place_infantary.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Board" parent="." instance=ExtResource( 3 )]
position = Vector2( -4.75684, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3, 3 )
script = ExtResource( 4 )

[node name="Info" type="RichTextLabel" parent="."]
margin_left = -501.0
margin_top = -1050.0
margin_right = 499.0
margin_bottom = -909.0
rect_pivot_offset = Vector2( 1025.24, 396.65 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "Tips
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsWindow" type="WindowDialog" parent="."]
visible = true
margin_left = -450.72
margin_top = -265.723
margin_right = 989.28
margin_bottom = 306.277
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CardsWindow"]
margin_right = 3020.0
margin_bottom = 1440.0
custom_constants/hseparation = 280
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradeCardsButton" type="Button" parent="CardsWindow"]
margin_left = 545.0
margin_top = 421.427
margin_right = 969.0
margin_bottom = 517.427
custom_fonts/font = SubResource( 2 )
text = "Trade Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewCardsButton" type="Button" parent="."]
margin_left = -301.063
margin_top = 952.0
margin_right = 321.937
margin_bottom = 1087.0
custom_fonts/font = SubResource( 3 )
text = "View Territory Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Node2D" parent="."]

[node name="NextPhaseButton" type="Button" parent="."]
margin_left = 656.0
margin_top = -1031.0
margin_right = 1150.0
margin_bottom = -939.0
custom_fonts/font = SubResource( 1 )
text = "DONE ATTACKING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogButton" type="Button" parent="."]
margin_left = 1622.36
margin_top = -1030.37
margin_right = 1793.36
margin_bottom = -938.365
custom_fonts/font = SubResource( 1 )
text = "LOG"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CardsWindow/TradeCardsButton" to="CardsWindow" method="_on_TradeCardsButton_pressed"]
[connection signal="pressed" from="ViewCardsButton" to="CardsWindow" method="_on_Button_pressed"]
[connection signal="pressed" from="NextPhaseButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NextPhaseButton" to="." method="_on_NextPhaseButton_pressed"]
[connection signal="pressed" from="LogButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LogButton" to="." method="_on_LogButton_pressed"]
